--- a/einv_sa/report/account_move.xml
+++ b/einv_sa/report/account_move.xml
@@ -60,6 +60,8 @@
                         style="display: inline-block; margin-top: 10px;"/>
                 </div>
             </div>
+            <div class="oe_structure"/>
+
         </template>
 
         <!-- <template id="einv_sa.inv_header">
