--- a/einv_sa/report/account_move.xml
+++ b/einv_sa/report/account_move.xml
@@ -239,11 +239,13 @@
                         </tr>
                         <tr>
                             <td t-att-style="style_td"> العنوان</td>
-                            <span t-field="doc.partner_id.building_no"/> - 
-                            <span t-field="doc.partner_id.street"/> - 
-                            <span t-field="doc.partner_id.district"/> - 
-                            <span t-field="doc.partner_id.city"/> - 
-                            <span t-field="doc.partner_id.country_id.name"/></td>
+                            <td t-att-style="style_td">
+                                    <span t-field="doc.partner_id.building_no"/>
+                                    <span t-field="doc.partner_id.street"/> - 
+                                    <span t-field="doc.partner_id.district"/> - 
+                                    <span t-field="doc.partner_id.city"/> - 
+                                    <span t-field="doc.partner_id.country_id.name"/>
+                            </td>
                             <td t-att-style="style_td">Address </td>
                         </tr>
                         <!-- <tr>
