--- a/einv_sa/static/css/report_style.css
+++ b/einv_sa/static/css/report_style.css
@@ -1,3 +1,23 @@
+@font-face {
+  font-family: 'Cairo';
+  src: url('/einv_sa/static/src/fonts/Cairo-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Cairo';
+  src: url('/einv_sa/static/src/fonts/Cairo-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+
+body, table, th, td, div, span {
+  font-family: 'Cairo', sans-serif !important;
+}
+
+
+
+
 
 .page{
   /*  margin-top:-50px !important; */
